--- a/7_marks_question.html
+++ b/7_marks_question.html
@@ -71,7 +71,7 @@
             <h1>Digital Fundamentals - Detailed Q&A</h1>
             <p class="subtitle">Comprehensive Answers for 7-Mark Question Themes</p>
             <div class="back-link-container">
-                <a href="DF.html" class="back-link">&larr; Back to Main Analyzer Page</a>
+                <a href="index.html" class="back-link">&larr; Back to Main Analyzer Page</a>
                 </div>
         </header>
         
